update about and fix skills-stats wrap

--- a/style.scss
+++ b/style.scss
@@ -1055,6 +1055,7 @@ $default-transition-delay: 0ms;
 	display: flex;
 	padding: 30px;
 	gap: 40px;
+	flex-wrap: wrap;
 
 	&--item {
 		display: flex;
